# mcp-automation-1

./: LICENSE  README.md  gmail-server.py  mcp-powerpoint-client.py  mcp-server.py  pyproject.toml
